--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "antd": "^5.22.5",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "react": "^19.0.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "date-fns": "^4.1.0"
+    "lodash.debounce": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
