--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,11 @@
     "react/prop-types": "off",
     "react/function-component-definition": "off",
     "object-curly-newline": "off",
-    "multiline-ternary": ["error", "never"],
+    "multiline-ternary": "off",
+    "operator-linebreak": "off",
     "max-len": [
       "error",
-      120,
+      140,
       {
         "ignoreComments": true,
         "ignoreStrings": true,
