--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-  "printWidth": 120,
+  "printWidth": 140,
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false
+  "jsxBracketSameLine": false,
+  "operatorPosition": "before"
 }
